# scitos_slam

./: .gitignore  README.md
docs/: 01-simple-control.md  01-simple_control.md  02-mapping_overview.md  03-mapping-part-1.md  04-mapping-part-2.md  05-localization-overview.md  06-localization-part-1.md  07-localization-part-2.md  08-path-planning-overview.md  09-ekf-extras.md  10-path-planning.md  11-path-planning-extras.md  12-final-presentation.md  localization_overview.tex  localization_recap.tex  mapping_overview.tex  path_planning_overview.tex
scitos_annus_loomets_kitsing/: CMakeLists.txt  package.xml
scitos_annus_loomets_kitsing/config/: mission.yaml
scitos_annus_loomets_kitsing/config/rviz/: manual.rviz
scitos_annus_loomets_kitsing/data/config/: mapper.yaml  mission.yaml
scitos_annus_loomets_kitsing/data/config/plotjuggler/: autonomous.xml  ekf_error.xml  ekf_error2.xml
scitos_annus_loomets_kitsing/data/config/rviz/: manual.rviz  mapping.rviz
scitos_annus_loomets_kitsing/data/maps/: map1.yml
scitos_annus_loomets_kitsing/data/urdf/: model.config  scitos.urdf.xacro
scitos_annus_loomets_kitsing/data/worlds/: test_world.sdf  test_world_model.sdf
scitos_annus_loomets_kitsing/include/scitos_annus_loomets_kitsing/: mapper.hpp  motion_controller.hpp
scitos_annus_loomets_kitsing/launch/: scitos.launch  scitos_autonomous.launch  scitos_autonomous_mapping.launch  scitos_manual.launch  scitos_manual_mapping.launch
scitos_annus_loomets_kitsing/scripts/: hough_plotter.py  teleop_key.py
scitos_annus_loomets_kitsing/src/: mapper.cpp  motion_controller.cpp  scitos_annus_loomets_kitsing_node.cpp
scitos_common/: CMakeLists.txt  package.xml
scitos_common/include/scitos_common/: dbscan.hpp  ekf.hpp  growing_pc.hpp  iepf.hpp  kmeans.hpp  line.hpp  odometry_subscriber.hpp  pid.hpp  polar2.hpp  queue_subscriber.hpp  util.hpp  vec2.hpp
scitos_common/include/scitos_common/grid/: morphology.hpp  transformations.hpp
scitos_common/include/scitos_common/map/: line.hpp  map.hpp
scitos_common/msg/: LineArray.msg  Polar2.msg  Vec2Array.msg
scitos_common/test/: grid_transformations_test.cpp  line_test.cpp  morphology_test.cpp  polar2_test.cpp
scitos_mapper/: CMakeLists.txt  package.xml
scitos_mapper/data/maps/: map.yaml
scitos_mapper/include/scitos_mapper/: scitos_mapper.hpp
scitos_mapper/src/: scitos_mapper.cpp  scitos_mapper_node.cpp
scitos_planner/: CMakeLists.txt  package.xml
scitos_planner/include/scitos_planner/: scitos_planner.hpp
scitos_planner/src/: scitos_planner.cpp  scitos_planner_node.cpp
